<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_item"
        android:name="com.zotto.kds.ui.home.HomeFragment"
        android:label="@string/item_txt" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.zotto.kds.ui.home.HomeFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.zotto.kds.ui.gallery.GalleryFragment"
        android:label="@string/menu_employee"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.zotto.kds.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_drivers"
        tools:layout="@layout/fragment_slideshow" />
</navigation>