<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainviewmodel"
            type="com.zotto.kds.ui.main.MainViewModel" />
        <variable
            name="adapter"
            type="com.zotto.kds.adapter.OrderAdapter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorHaiti"
        android:layout_height="match_parent">

       <!-- <include
            android:id="@+id/root_fragment"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:mainviewmodel="@{mainviewmodel}"
            layout="@layout/root_fragment" />-->

        <RelativeLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/colorHaiti">

            <ImageView
                android:id="@+id/hamburger_menu"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                app:srcCompat="@drawable/hamburger_menu_ic" />

            <RelativeLayout
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_toRightOf="@+id/hamburger_menu"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/active_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:text="@string/active_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/completed_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_toLeftOf="@+id/restore"
                    android:background="@drawable/rectangular_roundshape_pigeon_post"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:text="@string/completed_txt"
                    android:textColor="@color/colorBalticSea"
                    android:textSize="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/restore"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_restore" />

            </RelativeLayout>


        </RelativeLayout>

        <FrameLayout
            android:layout_below="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:background="@color/colorHaiti"
            android:id="@+id/root_container"
            android:layout_height="match_parent">

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/colorScampi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/plus_ic" />

            <TextView
                android:id="@+id/go_back_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/go_back_txt"
                app:layout_constraintBottom_toBottomOf="@+id/fab"
                app:layout_constraintStart_toEndOf="@+id/fab"
                app:layout_constraintTop_toTopOf="@+id/fab" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/charging_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorScampi"
                app:layout_constraintBottom_toTopOf="@+id/fab"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/charge">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>

            <TextView
                android:id="@+id/charging_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/_6sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sent_robot_txt"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/charging_fab"
                app:layout_constraintStart_toEndOf="@+id/charging_fab"
                app:layout_constraintTop_toTopOf="@+id/charging_fab" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/roboto_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"

                android:backgroundTint="@color/colorScampi"
                app:layout_constraintBottom_toTopOf="@+id/charging_fab"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/robot" />

            <TextView
                android:id="@+id/roboto_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/call_robot_txt"
                app:layout_constraintBottom_toBottomOf="@+id/roboto_fab"
                app:layout_constraintStart_toEndOf="@+id/roboto_fab"
                app:layout_constraintTop_toTopOf="@+id/roboto_fab" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/waiter_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"

                android:backgroundTint="@color/colorScampi"
                app:layout_constraintBottom_toTopOf="@+id/roboto_fab"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/waiter" />

            <TextView
                android:id="@+id/waiter_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/call_waiter_txt"
                app:layout_constraintBottom_toBottomOf="@+id/waiter_fab"
                app:layout_constraintStart_toEndOf="@+id/waiter_fab"
                app:layout_constraintTop_toTopOf="@+id/waiter_fab" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</layout>