<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="mainviewmodel"
            type="com.zotto.kds.ui.main.MainViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.KDS.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.KDS.PopupOverlay">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/active_orders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/completed_orders"
                        android:background="@drawable/rectangular_roundshape_pigeon_post"
                        android:fontFamily="@font/roboto_medium"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/active_txt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:id="@+id/completed_orders"
                        android:fontFamily="@font/roboto_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangular_round_shape_white"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/completed_txt"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/_10sdp" />

                    <ImageView
                        android:id="@+id/summary"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:background="@drawable/circularshpe_white"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/summary_ic" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <include
            android:id="@+id/content_main"
            layout="@layout/content_main"
            app:mainviewmodel="@{mainviewmodel}"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/colorScampi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/plus_ic" />

            <TextView
                android:id="@+id/go_back_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/go_back_txt"
                app:layout_constraintBottom_toBottomOf="@+id/fab"
                app:layout_constraintStart_toEndOf="@+id/fab"
                app:layout_constraintTop_toTopOf="@+id/fab" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/charging_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorScampi"
                app:layout_constraintBottom_toTopOf="@+id/fab"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/charge">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>

            <TextView
                android:id="@+id/charging_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/_6sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sent_robot_txt"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/charging_fab"
                app:layout_constraintStart_toEndOf="@+id/charging_fab"
                app:layout_constraintTop_toTopOf="@+id/charging_fab" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/roboto_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"

                android:backgroundTint="@color/colorScampi"
                app:layout_constraintBottom_toTopOf="@+id/charging_fab"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/robot" />

            <TextView
                android:id="@+id/roboto_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/call_robot_txt"
                app:layout_constraintBottom_toBottomOf="@+id/roboto_fab"
                app:layout_constraintStart_toEndOf="@+id/roboto_fab"
                app:layout_constraintTop_toTopOf="@+id/roboto_fab" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/waiter_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"

                android:backgroundTint="@color/colorScampi"
                app:layout_constraintBottom_toTopOf="@+id/roboto_fab"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/waiter" />

            <TextView
                android:id="@+id/waiter_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/call_waiter_txt"
                app:layout_constraintBottom_toBottomOf="@+id/waiter_fab"
                app:layout_constraintStart_toEndOf="@+id/waiter_fab"
                app:layout_constraintTop_toTopOf="@+id/waiter_fab" />

        </androidx.constraintlayout.widget.ConstraintLayout>


       <!-- <FrameLayout
            android:id="@+id/summary_container"
           android:layout_marginLeft="@dimen/_300sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />-->

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>