<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemPage"
            type="com.zotto.kds.ui.itemmanagement.ItemManagement" />

        <variable
            name="viewModel"
            type="com.zotto.kds.ui.itemmanagement.ItemManagementViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorHaiti"
        tools:ignore="MissingDefaultResource">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_ic" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/item_management_txt"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_100sdp"
            android:background="@drawable/rectangular_shape_with_border_line"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn">

            <RelativeLayout
                android:id="@+id/all_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@{viewModel.selectedItem==0 ? @drawable/rectangular_color_pigeon_post : @drawable/rectangular_shape_with_border_line}"
                android:onClick="@{v-> viewModel.getAllCategories()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/all_txt"
                    android:textColor="@{viewModel.selectedItem==0 ? @color/darkGray : @color/white}"
                    android:textSize="@dimen/_8sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/avail_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@{viewModel.selectedItem==1 ? @drawable/rectangular_color_pigeon_post: @drawable/rectangular_shape_with_border_line}"
                android:onClick="@{v ->viewModel.getAvailableCategories()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/available_item_txt"
                    android:textColor="@{viewModel.selectedItem==1 ? @color/darkGray : @color/white}"
                    android:textSize="@dimen/_8sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/unavail_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@{viewModel.selectedItem==2 ? @drawable/rectangular_color_pigeon_post : @drawable/rectangular_shape_with_border_line}"
                android:onClick="@{v-> viewModel.getUnavailableCategories()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/unavailable_item_txt"
                    android:textColor="@{viewModel.selectedItem==2 ? @color/darkGray : @color/white}"
                    android:textSize="@dimen/_8sdp" />
            </RelativeLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>